# holo-auth

./: .drone.yml  .gitignore  Cargo.toml  README.md  default.nix  pkgs.nix  shell.nix  style.css  wrangler.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  deploy-to-alphaNet.yml  deploy-to-devNet.yml  deploy-to-qaNet.yml
client/: Cargo.toml  setup.py
client/holo_auth_client/: __init__.py
client/src/: main.rs  validation.rs
error/: index.html  index.js  style.css
freshdesk-import/: setup.py
freshdesk-import/holo_auth_freshdesk_import/: main.py
import/: setup.py
import/holo_auth_import/: main.py
old-error/: index.html  index.js
old-success/: index.js
res/error/: index.html
res/success/: index.js
server/: package-lock.json  package.json  webpack.config.js  wrangler.toml
server/src/: hmac.js  index.js  util.js
server/src/routes/: challenge.js  notify.js  response.js  zt_registration.js
status/: LICENSE  default.nix  wrangler.toml
status/.github/workflows/: build.yml
status/res/: index.html  index.js  style.css
success/: index.html  index.js  style.css
success-with-server/: package-lock.json  package.json  webpack.config.js
success-with-server/resources/: index.html  style.css
success-with-server/src/: index.js
workers-site/: index.js
