[package]
name = "holo-auth-client"
edition = "2018"
version = "0.0.1"

[dependencies]
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
failure = "0.1"
lazy_static = "1"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
zerotier-api = "0.1"
base64 = "0.13.0"
holochain_types = "0.0.17"

[dependencies.hpos-config-core]
git = "https://github.com/Holo-Host/hpos-config"
rev = "e360b7c122ccd0281f8c573ece1b851539ebed76"

[dependencies.hpos-config-seed-bundle-explorer]
git = "https://github.com/Holo-Host/hpos-config"
rev = "e360b7c122ccd0281f8c573ece1b851539ebed76"