[package]
name = "holo-auth-client"
edition = "2021"
version = "0.1.0"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
failure = "0.1"
lazy_static = "1"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
zerotier-api = "0.2.0"
base64 = "0.22.1"
holochain_types = "0.3.2"

[dependencies.hpos-config-core]
git = "https://github.com/Holo-Host/hpos-config"
rev = "c17067b6a4214f9646316fa681651b73c72bf7e1"

[dependencies.hpos-config-seed-bundle-explorer]
git = "https://github.com/Holo-Host/hpos-config"
rev = "c17067b6a4214f9646316fa681651b73c72bf7e1"
